# SDA

LAb3_7/: CMakeLists.txt
LAb3_7/TAD Colectie/Proiect C++/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
LAb3_7/TAD Colectie/Teste/: TestExtins.cpp  TestScurt.cpp
Lab5_9/: CMakeLists.txt  main.cpp
Lab5_9/Proiect C++/: IteratorMD.cpp  IteratorMD.h  MD.cpp  MD.h
Lab5_9/Teste/: TestExtins.cpp  TestScurt.cpp
Lab7_11/: CMakeLists.txt
Lab7_11/Proiect C++/: App.cpp  Matrice.cpp  Matrice.h
Lab7_11/Teste/: TestExtins.cpp  TestScurt.cpp
Lab_1_try/: CMakeLists.txt  main.cpp  test_sterge.cpp  test_sterse.h
Lab_1_try/Proiect C++/Colectie/: Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Lab_1_try/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
