cmake_minimum_required(VERSION 3.24)
project(LAb3_7)

set(CMAKE_CXX_STANDARD 17)

add_executable(LAb3_7 "TAD Colectie/Proiect C++/Colectie/Colectie.h" "TAD Colectie/Proiect C++/Colectie/Colectie.cpp" "TAD Colectie/Proiect C++/Colectie/IteratorColectie.cpp" "TAD Colectie/Proiect C++/Colectie/App.cpp" "TAD Colectie/Teste/TestExtins.cpp" "TAD Colectie/Teste/TestScurt.cpp")
